fix: article overflow hidden及動態調整

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,5 +1,8 @@
 @import "var.sass"
 
+article
+  overflow: hidden
+
 section.banner
   position: relative
   z-index: 0
